cmake_minimum_required(VERSION 3.30)
project(W02)

set(CMAKE_CXX_STANDARD 20)

#add_executable(W02 source01.c)
#add_executable(W02 source02.c)
#add_executable(W02 source03.c)
#add_executable(W02 source04.c)
#add_executable(W02 source05.c)
add_executable(W02 source06.c)
#add_executable(W02 source07.c)
