cmake_minimum_required(VERSION 3.30)
project(W03)

set(CMAKE_CXX_STANDARD 20)

#add_executable(W03 source01.c)
#add_executable(W03 source02.c)
#add_executable(W03 source03.c)
#add_executable(W03 source04.c)
#add_executable(W03 source05.c)
#add_executable(W03 source06.c)
#add_executable(W03 source07.c)
add_executable(W03 source08.c)